# sol-example

./: .gitmodules  CMakeLists.txt  README.md  build.sh
assets/scripts/: main.lua  module.lua
libraries/sol/sol/: config.hpp  forward.hpp  sol.hpp
sources/: entt_bind.cpp  entt_bind.hpp  glm_bind.cpp  glm_bind.hpp  main.cpp  mesh.hpp  state.hpp
sources/components/: mesh_reference.hpp  transform.hpp
